# LightCC

./: CMakeLists.txt  main.c
include/: lcc_array.h  lcc_builtin_endians.i  lcc_builtin_limits.i  lcc_builtin_sizes.i  lcc_builtin_types.i  lcc_file.h  lcc_lexer.h  lcc_map.h  lcc_set.h  lcc_string.h  lcc_string_array.h  lcc_utils.h
src/: lcc_array.c  lcc_file.c  lcc_lexer.c  lcc_map.c  lcc_string.c  lcc_string_array.c
